# ==============================================================================
# Test Configuration
# ==============================================================================
# Constitution Principle VIII: Testing Discipline
# - DSP algorithms MUST be pure functions testable without VST infrastructure
# - Unit tests MUST cover all DSP algorithms
# - Tests MUST run in CI/CD pipeline
# ==============================================================================

cmake_minimum_required(VERSION 3.20)

# ==============================================================================
# Fetch Testing Frameworks
# ==============================================================================
# Using Catch2 v3 for modern C++ testing
# Using ApprovalTests.cpp for golden master / approval testing

include(FetchContent)

# Ensure consistent runtime library with Catch2
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")

# Catch2 - Unit testing framework
# Using URL download instead of git clone for CI reliability
FetchContent_Declare(
    Catch2
    URL https://github.com/catchorg/Catch2/archive/refs/tags/v3.5.0.tar.gz
    URL_HASH SHA256=f6d4f8d78a9b59ec72a81d49f58d18eb317372ac07f8d9432710a079e69fd66a
    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
)

# ApprovalTests.cpp - Golden master / approval testing
# Note: Hash may need updating if download fails
FetchContent_Declare(
    ApprovalTests
    URL https://github.com/approvals/ApprovalTests.cpp/archive/refs/tags/v.10.13.0.tar.gz
    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
)

FetchContent_MakeAvailable(Catch2 ApprovalTests)

# ==============================================================================
# Test Helper Library
# ==============================================================================
# Shared utilities for DSP testing (signal generators, comparators, etc.)

add_library(test_helpers INTERFACE)

target_include_directories(test_helpers
    INTERFACE
        ${CMAKE_CURRENT_SOURCE_DIR}  # For test_helpers/xxx.h includes
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

target_link_libraries(test_helpers
    INTERFACE
        Catch2::Catch2
)

# ==============================================================================
# DSP Unit Tests
# ==============================================================================
# Constitution Principle VIII: DSP algorithms must be independently testable

add_executable(dsp_tests
    unit/test_dsp_utils.cpp
    unit/core/db_utils_test.cpp
    unit/core/math_constants_test.cpp
    unit/core/window_functions_test.cpp
    unit/core/random_test.cpp
    unit/core/note_value_test.cpp
    unit/core/note_value_mapping_test.cpp
    unit/core/block_context_test.cpp
    unit/core/fast_math_test.cpp
    unit/core/interpolation_test.cpp
    unit/core/stereo_utils_test.cpp
    unit/core/pitch_utils_test.cpp
    unit/core/grain_envelope_test.cpp
    unit/core/dropdown_mappings_test.cpp
    unit/core/crossfade_utils_test.cpp
    unit/primitives/delay_line_test.cpp
    unit/primitives/crossfading_delay_line_test.cpp
    unit/primitives/lfo_test.cpp
    unit/primitives/biquad_test.cpp
    unit/primitives/smoother_test.cpp
    unit/primitives/oversampler_test.cpp
    unit/primitives/fft_test.cpp
    unit/primitives/spectral_buffer_test.cpp
    unit/primitives/stft_test.cpp
    unit/primitives/bit_crusher_test.cpp
    unit/primitives/bit_crusher_symmetric_quantization_test.cpp
    unit/primitives/bit_crusher_rng_bias_test.cpp
    unit/primitives/sample_rate_reducer_test.cpp
    unit/primitives/reverse_buffer_test.cpp
    unit/primitives/grain_pool_test.cpp
    # Layer 2: DSP Processors
    unit/processors/multimode_filter_test.cpp
    unit/processors/saturation_processor_test.cpp
    unit/processors/envelope_follower_test.cpp
    unit/processors/dynamics_processor_test.cpp
    unit/processors/ducking_processor_test.cpp
    unit/processors/noise_generator_test.cpp
    unit/processors/midside_processor_test.cpp
    unit/processors/diffusion_network_test.cpp
    unit/processors/pitch_shift_processor_test.cpp
    unit/processors/reverse_feedback_processor_test.cpp
    unit/processors/grain_scheduler_test.cpp
    unit/processors/grain_processor_test.cpp
    # Layer 3: System Components
    unit/systems/delay_engine_test.cpp
    unit/systems/feedback_network_test.cpp
    unit/systems/feedback_network_dc_blocking_test.cpp
    unit/systems/modulation_matrix_test.cpp
    unit/systems/character_processor_test.cpp
    unit/systems/character_processor_digital_ramping_test.cpp
    unit/systems/stereo_field_test.cpp
    unit/systems/tap_manager_test.cpp
    unit/systems/flexible_feedback_network_test.cpp
    unit/systems/granular_engine_test.cpp
    # Layer 4: User Features
    unit/features/tape_delay_test.cpp
    unit/features/bbd_delay_test.cpp
    unit/features/digital_delay_test.cpp
    unit/features/digital_width_processing_test.cpp
    unit/features/digital_delay_age0_ramping_test.cpp
    unit/features/ping_pong_delay_test.cpp
    unit/features/multi_tap_delay_test.cpp
    unit/features/shimmer_delay_test.cpp
    unit/features/reverse_delay_test.cpp
    unit/features/freeze_mode_test.cpp
    unit/features/ducking_delay_test.cpp
    unit/features/spectral_delay_test.cpp
    unit/features/granular_delay_test.cpp
    unit/features/granular_delay_tempo_sync_test.cpp
    # Processor Tests
    unit/processor/mode_crossfade_tests.cpp
    # Parameter Normalization Tests
    unit/parameters/bbd_params_test.cpp
    unit/parameters/digital_params_test.cpp
    unit/parameters/pingpong_params_test.cpp
    unit/parameters/multitap_params_test.cpp
    unit/parameters/granular_params_test.cpp
    unit/parameters/spectral_params_test.cpp
    unit/parameters/shimmer_params_test.cpp
    unit/parameters/tape_params_test.cpp
    unit/parameters/reverse_params_test.cpp
    unit/parameters/freeze_params_test.cpp
    unit/parameters/ducking_params_test.cpp
)

target_include_directories(dsp_tests
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

target_link_libraries(dsp_tests
    PRIVATE
        Catch2::Catch2
        test_helpers
)

target_compile_features(dsp_tests PRIVATE cxx_std_20)

# ==============================================================================
# Disable -ffast-math for files that require IEEE 754 compliant NaN handling
# ==============================================================================
# The VST3 SDK enables -ffast-math globally (see SMTG_PlatformToolset.cmake)
# which causes isnan() and __builtin_isnan() to be optimized out.
# We must disable it for files using db_utils.h NaN detection.
# This follows the same pattern used by VSTGUI (see uijsonpersistence.cpp)
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    set_source_files_properties(
        unit/test_dsp_utils.cpp
        unit/core/db_utils_test.cpp
        unit/core/math_constants_test.cpp
        unit/core/window_functions_test.cpp
        unit/core/note_value_test.cpp
        unit/core/note_value_mapping_test.cpp
        unit/core/block_context_test.cpp
        unit/core/fast_math_test.cpp
        unit/core/interpolation_test.cpp
        unit/core/pitch_utils_test.cpp
        unit/core/grain_envelope_test.cpp
        unit/core/dropdown_mappings_test.cpp
        unit/core/crossfade_utils_test.cpp
        unit/primitives/smoother_test.cpp
        unit/primitives/oversampler_test.cpp
        unit/primitives/delay_line_test.cpp
        unit/primitives/lfo_test.cpp
        unit/primitives/biquad_test.cpp
        unit/primitives/fft_test.cpp
        unit/primitives/spectral_buffer_test.cpp
        unit/primitives/stft_test.cpp
        unit/primitives/bit_crusher_test.cpp
        unit/primitives/bit_crusher_symmetric_quantization_test.cpp
        unit/primitives/bit_crusher_rng_bias_test.cpp
        unit/primitives/sample_rate_reducer_test.cpp
        unit/primitives/reverse_buffer_test.cpp
        unit/primitives/grain_pool_test.cpp
        # Layer 2: DSP Processors
        unit/processors/multimode_filter_test.cpp
        unit/processors/saturation_processor_test.cpp
        unit/processors/envelope_follower_test.cpp
        unit/processors/dynamics_processor_test.cpp
        unit/processors/ducking_processor_test.cpp
        unit/processors/noise_generator_test.cpp
        unit/processors/midside_processor_test.cpp
        unit/processors/diffusion_network_test.cpp
        unit/processors/pitch_shift_processor_test.cpp
        unit/processors/reverse_feedback_processor_test.cpp
        unit/processors/grain_scheduler_test.cpp
        unit/processors/grain_processor_test.cpp
        # Layer 3: System Components
        unit/systems/delay_engine_test.cpp
        unit/systems/feedback_network_test.cpp
        unit/systems/modulation_matrix_test.cpp
        unit/systems/character_processor_test.cpp
        unit/systems/stereo_field_test.cpp
        unit/systems/tap_manager_test.cpp
        unit/systems/flexible_feedback_network_test.cpp
        unit/systems/granular_engine_test.cpp
        unit/systems/feedback_network_dc_blocking_test.cpp
        unit/systems/character_processor_digital_ramping_test.cpp
        # Layer 4: User Features
        unit/features/tape_delay_test.cpp
        unit/features/bbd_delay_test.cpp
        unit/features/digital_delay_test.cpp
        unit/features/digital_width_processing_test.cpp
        unit/features/digital_delay_age0_ramping_test.cpp
        unit/features/ping_pong_delay_test.cpp
        unit/features/multi_tap_delay_test.cpp
        unit/features/shimmer_delay_test.cpp
        unit/features/reverse_delay_test.cpp
        unit/features/freeze_mode_test.cpp
        unit/features/ducking_delay_test.cpp
        unit/features/spectral_delay_test.cpp
        unit/features/granular_delay_test.cpp
        unit/features/granular_delay_tempo_sync_test.cpp
        # Processor Tests
        unit/processor/mode_crossfade_tests.cpp
        # Parameter Normalization Tests
        unit/parameters/bbd_params_test.cpp
        unit/parameters/digital_params_test.cpp
        unit/parameters/pingpong_params_test.cpp
        unit/parameters/multitap_params_test.cpp
        unit/parameters/granular_params_test.cpp
        unit/parameters/spectral_params_test.cpp
        unit/parameters/shimmer_params_test.cpp
        unit/parameters/tape_params_test.cpp
        unit/parameters/reverse_params_test.cpp
        unit/parameters/freeze_params_test.cpp
        unit/parameters/ducking_params_test.cpp
        PROPERTIES COMPILE_FLAGS "-fno-fast-math -fno-finite-math-only"
    )
endif()

# ==============================================================================
# Approval Tests (Golden Master / Regression)
# ==============================================================================
# For verifying DSP algorithm outputs against approved references

add_executable(approval_tests
    regression/test_approvals_main.cpp
)

target_include_directories(approval_tests
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

target_link_libraries(approval_tests
    PRIVATE
        Catch2::Catch2
        ApprovalTests::ApprovalTests
        test_helpers
)

target_compile_features(approval_tests PRIVATE cxx_std_20)

# ==============================================================================
# CTest Integration
# ==============================================================================

list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
include(CTest)
include(Catch)
catch_discover_tests(dsp_tests)
catch_discover_tests(approval_tests)

# ==============================================================================
# VST3 Validator Integration
# ==============================================================================
# The vstvalidator tool checks VST3 plugin conformity
# It's built as part of SMTG_ENABLE_VST3_HOSTING_EXAMPLES

# Custom target to validate the built plugin
if(TARGET validator)
    # Path to the built plugin
    set(PLUGIN_PATH "${CMAKE_BINARY_DIR}/VST3/$<CONFIG>/Iterum.vst3")

    add_custom_target(validate_plugin
        COMMAND $<TARGET_FILE:validator> "${PLUGIN_PATH}"
        DEPENDS Iterum validator
        COMMENT "Running VST3 validator on Iterum.vst3"
        VERBATIM
    )

    # Also add a quick validation (basic tests only)
    add_custom_target(validate_plugin_quick
        COMMAND $<TARGET_FILE:validator> "${PLUGIN_PATH}" -q
        DEPENDS Iterum validator
        COMMENT "Running quick VST3 validation on Iterum.vst3"
        VERBATIM
    )

    # -------------------------------------------------------------------------
    # CTest Integration for CI
    # -------------------------------------------------------------------------
    # Runs the validator as a proper CTest test
    # Usage: ctest -R vst3_validator (or runs with all tests)
    # Note: Requires Iterum and validator targets to be built first
    #       In CI, build these targets before running ctest

    add_test(
        NAME vst3_validator
        COMMAND $<TARGET_FILE:validator> -q "${PLUGIN_PATH}"
        WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin/$<CONFIG>"
    )

    set_tests_properties(vst3_validator PROPERTIES
        LABELS "integration;vst3;validator"
        TIMEOUT 120
        # This test requires the plugin to be built - mark as fixture
        FIXTURES_REQUIRED "plugin_built"
    )

    # Extensive validator test (runs additional tests, slower)
    add_test(
        NAME vst3_validator_extensive
        COMMAND $<TARGET_FILE:validator> -e "${PLUGIN_PATH}"
        WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin/$<CONFIG>"
    )

    set_tests_properties(vst3_validator_extensive PROPERTIES
        LABELS "integration;vst3;validator;slow"
        TIMEOUT 300
        FIXTURES_REQUIRED "plugin_built"
    )
endif()

# ==============================================================================
# Integration Tests (Optional - requires built plugin)
# ==============================================================================
# These tests verify the plugin loads correctly in a test host
# Uncomment when ready to add integration tests

# add_executable(integration_tests
#     integration/test_plugin_load.cpp
# )
# target_link_libraries(integration_tests PRIVATE Catch2::Catch2WithMain sdk)

# ==============================================================================
# Performance Benchmarks
# ==============================================================================
# Standalone benchmarks for measuring DSP performance (SC-001)

add_executable(benchmark_tanh
    benchmark_tanh.cpp
)

target_include_directories(benchmark_tanh
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

# Release optimizations for accurate benchmarking
# MSVC: Only add /O2 in non-Debug builds to avoid conflict with /RTC1
target_compile_options(benchmark_tanh PRIVATE
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<NOT:$<CONFIG:Debug>>>:/O2 /fp:fast>
    $<$<CXX_COMPILER_ID:GNU>:-O3 -ffast-math>
    $<$<CXX_COMPILER_ID:Clang>:-O3 -ffast-math>
)

# FeedbackNetwork benchmark (SC-007: <1% CPU at 44.1kHz stereo)
add_executable(benchmark_feedback_network
    benchmark_feedback_network.cpp
)

target_include_directories(benchmark_feedback_network
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

# Release optimizations for accurate benchmarking
# MSVC: Only add /O2 in non-Debug builds to avoid conflict with /RTC1
target_compile_options(benchmark_feedback_network PRIVATE
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<NOT:$<CONFIG:Debug>>>:/O2 /fp:fast>
    $<$<CXX_COMPILER_ID:GNU>:-O3 -ffast-math>
    $<$<CXX_COMPILER_ID:Clang>:-O3 -ffast-math>
)

# ShimmerDelay benchmark (SC-006: <1% CPU at 44.1kHz stereo)
add_executable(benchmark_shimmer_delay
    benchmark_shimmer_delay.cpp
)

target_include_directories(benchmark_shimmer_delay
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

# Release optimizations for accurate benchmarking
# MSVC: Only add /O2 in non-Debug builds to avoid conflict with /RTC1
target_compile_options(benchmark_shimmer_delay PRIVATE
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<NOT:$<CONFIG:Debug>>>:/O2 /fp:fast>
    $<$<CXX_COMPILER_ID:GNU>:-O3 -ffast-math>
    $<$<CXX_COMPILER_ID:Clang>:-O3 -ffast-math>
)

# SpectralDelay benchmark (SC-005: <3% CPU at 44.1kHz stereo with 2048 FFT)
add_executable(benchmark_spectral_delay
    benchmark_spectral_delay.cpp
)

target_include_directories(benchmark_spectral_delay
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

# Release optimizations for accurate benchmarking
# MSVC: Only add /O2 in non-Debug builds to avoid conflict with /RTC1
target_compile_options(benchmark_spectral_delay PRIVATE
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<NOT:$<CONFIG:Debug>>>:/O2 /fp:fast>
    $<$<CXX_COMPILER_ID:GNU>:-O3 -ffast-math>
    $<$<CXX_COMPILER_ID:Clang>:-O3 -ffast-math>
)

# Mode Crossfade benchmark (T045: verify crossfade adds minimal CPU overhead)
add_executable(benchmark_mode_crossfade
    benchmark_mode_crossfade.cpp
)

target_include_directories(benchmark_mode_crossfade
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
)

# Release optimizations for accurate benchmarking
# MSVC: Only add /O2 in non-Debug builds to avoid conflict with /RTC1
target_compile_options(benchmark_mode_crossfade PRIVATE
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<NOT:$<CONFIG:Debug>>>:/O2 /fp:fast>
    $<$<CXX_COMPILER_ID:GNU>:-O3 -ffast-math>
    $<$<CXX_COMPILER_ID:Clang>:-O3 -ffast-math>
)

# ==============================================================================
# VST3 SDK Unit Tests
# ==============================================================================
# Tests for VST3-specific functionality (parameters, controller, etc.)
# These tests link against the VST3 SDK, unlike dsp_tests which are pure C++

add_executable(vst_tests
    unit/vst/string_list_parameter_test.cpp
    unit/vst/control_visibility_test.cpp
    unit/vst/version_display_test.cpp
    unit/vst/digital_width_param_test.cpp
    unit/vst/editor_lifecycle_test.cpp
    unit/vst/toggle_control_test.cpp
    unit/vst/granular_tempo_sync_ui_test.cpp
)

target_include_directories(vst_tests
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/include
        ${vst3sdk_SOURCE_DIR}
)

target_link_libraries(vst_tests
    PRIVATE
        Catch2::Catch2
        sdk
)

# On macOS, VST3 SDK requires CoreFoundation framework
if(APPLE)
    target_link_libraries(vst_tests PRIVATE "-framework CoreFoundation")
endif()

target_compile_features(vst_tests PRIVATE cxx_std_20)

# Register with CTest
catch_discover_tests(vst_tests)
